@@ -1,3 +1,8 @@
+2021-08-02 Marco Bodrato <bodrato@mail.dm.unipi.it>
+
+	* mini-gmp.c (mpz_rootrem): Better initial guess.
+	(gmp_stronglucas): Shortcut, mpn_common_scan instead of mpz_scan0.
+
 2021-05-13 Marco Bodrato <bodrato@mail.dm.unipi.it>
 
 	* tests/t-reuse.c: Use numberof() to reduce the risk of typos.
